@@ -1,4 +1,8 @@
-2006-04-29 Scott Dattalo <scott@dattalo.com>
+2006-05-06 Scott Dattalo <scott@dattalo.com>
+	* src/stimuli.cc, src/stimuli.h, cli/cmd_stimulus.cc: Stimuli
+	parameters are now initialized with Values instead of doubles.
+
+2006-05-06 Scott Dattalo <scott@dattalo.com>
 	* modules/usart.h, modules/usart.cc:
 	 - Added the boolean attribute 'crlf'. If this is set true, then
 	 carriage returns and line feeds will generate new lines in the
